--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.auribises.enc2018android">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,15 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ActivityOne">
+
+        </activity>
+        <activity android:name=".ActivityTwo" />
+        <activity android:name=".AllSongsActivity" />
+        <activity android:name=".AmazonActivity" />
+        <activity android:name=".ViewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityTwo" />
-        <activity android:name=".AllSongsActivity" />
-        <activity android:name=".AmazonActivity"></activity>
     </application>
 
 </manifest>
