--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -19,14 +20,14 @@
         <activity android:name=".AmazonActivity" />
         <activity android:name=".ViewsActivity" />
         <activity android:name=".MyLocationActivity" />
-        <activity android:name=".NewsActivity">
-
-        </activity>
+        <activity android:name=".NewsActivity"></activity>
         <activity android:name=".NewsDisplayActivity" />
         <activity android:name=".MyDialogActivity">
+
+        </activity>
+        <activity android:name=".MySensorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
