--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,21 +18,21 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ActivityOne" />
         <activity android:name=".ActivityTwo" />
-        <activity android:name=".AllSongsActivity" />
-        <activity android:name=".AmazonActivity" />
-        <activity android:name=".ViewsActivity" />
-        <activity android:name=".MyLocationActivity" />
-        <activity android:name=".NewsActivity"></activity>
-        <activity android:name=".NewsDisplayActivity" />
-        <activity android:name=".MyDialogActivity">
-
-        </activity>
-        <activity android:name=".MySensorActivity">
+        <activity android:name=".AllSongsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AmazonActivity" />
+        <activity android:name=".ViewsActivity" />
+        <activity android:name=".MyLocationActivity" />
+        <activity android:name=".NewsActivity" />
+        <activity android:name=".NewsDisplayActivity" />
+        <activity android:name=".MyDialogActivity"></activity>
+        <activity android:name=".MySensorActivity"></activity>
+        <activity android:name=".PlayMusicActivity"></activity>
     </application>
 
 </manifest>
